Notify creator when an opponent leaves a scheduled challenge and update challenge status to PENDING